# clk

./: Cargo.toml  README.md
.sqlx/: query-0ad284abdb5f3c8cd479b20113737c1e381b582fa41abad154fd83ce2a8d4e3d.json  query-16ba7b36093ea55fc85e870a98f67dad4949b1a7ddbd1dc7c8e8d2b7a351f962.json  query-1de58d626ef539caf6768184d808cafb3f4014265960ed9b033fb3b81082f8d9.json  query-2729e227b9b33d7dc680c8cf985bb87a730a154fe29b883f9f460abfa6093f0e.json  query-440a47aeaef38d4a65e6a4444e1545d7e1ee17e17d4567c555fca52e32552fa4.json  query-9c06dce4edfd588d721c1e3c626f0902b6f8714103e46973ed7b60859f92a853.json  query-b3d3367d240962111d0f1d88ee9ed823749d0298086970a036f5bc3ab737e034.json
migrations/: 0_base.sql
src/: main.rs  sqlite.rs
src/cli/: args.rs  mod.rs  proj.rs
