[package]
name = "clk"
version = "0.1.0"
edition = "2021"

description = "track projects; run reports"
license = "MIT"
repository = "https://github.com/eulegang/clk"

[dependencies]
clap = { version = "4.5.9", features = ["derive", "env"] }
csv = "1.3.0"
dirs = "5.0.1"
eyre = "0.6.12"
libsqlite3-sys = "^0.27"
sqlx = { version = "0.7.4", features = ["sqlx-sqlite", "chrono", "runtime-tokio", "sqlite"] }
tokio = { version = "1.38.1", features = ["full"] }
